# jit_aot_course

./: CMakeLists.txt  README.md
domTree/: CMakeLists.txt  arena.cpp  arena.h  dfo_rpo.h  domTree.cpp  domTree.h  dsu.cpp  dsu.h  loop.cpp  loop.h  loopChecker.cpp  loopChecker.h
irGen/: CMakeLists.txt  README.md  base.cpp  base.h  bb.cpp  bb.h  compiler.h  graph.cpp  graph.h  graphHelper.cpp  graphHelper.h  helperBuilderFunctions.h  input.h  instruction.cpp  instruction.h  instructions.h  instructionsCopy.cpp  irGen.cpp  irGen.h  marker.h  singleInstruction.cpp  singleInstruction.h  user.h
livenessAnalysis/: CMakeLists.txt  liveRanges.cpp  liveRanges.h  livenessAnalyzer.cpp  livenessAnalyzer.h
optimizations/: CMakeLists.txt  checkElimination.cpp  checkElimination.h  constFolding.cpp  constFolding.h  pass.h  peepholes.cpp  peepholes.h  staticInline.cpp  staticInline.h
tasks/: NOTES.md  README.md
tests/: CMakeLists.txt  bb.cpp  dfo_rpo.cpp  domTree.cpp  fact.cpp  fact1.cpp  graph.cpp  inline.cpp  instructions.cpp  loopChecker.cpp  main.cpp  peepholes.cpp  someAttemptsToDump.txt  testBase.cpp  testBase.h
